src/App.css
/*Header.jsx*/
.header-div {
  display: flex;
  background-color: #ffffff;
  align-items: center;
  flex-direction: column;
}

.header-div h2 {
  margin: 0;
  font-size: 40px;
  margin-bottom: 20px;
}

.logo-img {
  width: 180px;
}

/*SearchFrom.jsx*/
.search-form {
  background-color: rgb(228, 219, 219);
  padding: 20px;
  width: 60%;
  border-radius: 10px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
}

.search-form-label {
  font-weight: 600;
}

.property-type-input-div .css-13cymwt-control {
  width: 100%;
}

.price-bedroom-div {
  display: flex;
  gap: 20px;
}

.date-postcode-div {
  display: flex;
  justify-content: space-between;
  gap: 20px;
  padding-bottom: 20px;
}

.date-postcode-div div {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.date-postcode-div input {
  padding: 10px;
  border-radius: 3px;
  border: 1px solid rgb(208, 204, 204);
}

.css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input {
  background-color: white !important;
  border: none !important;
  height: 36px !important;
  padding: 0px !important;
}

.price-input-div .css-13cymwt-control {
  width: 100%;
}

.css-13cymwt-control {
  margin: 2px 0 10px 0;
}

.search-form button[type="submit"] {
  background-color: rgb(194, 218, 237);
  border: 1px solid black;
}

/*root-body*/
#root {
  width: 100%;
}

/*PropertyCard.jsx*/
.property-card {
  background-color: rgba(68, 94, 93, 0.235);
  margin: 0 10px 10px 0;
  padding: 10px;
  border-radius: 10px;
  text-align: center;
  width: 40%;
  min-width: 340px;
}

.property-card img {
  width: 80%;
  height: 40%;
  border-radius: 10px;
}

.property-card-location-p {
  margin: 0;
}

.property-card-bedroom-div {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.property-card-bedroom-div p {
  margin: 0;
}

.property-card-h2 {
  font-size: larger;
  margin: 5px 0 0 0;
}

.property-card-btn {
  margin: 5px;
}

/*Favourites*/
.favourites {
  flex: 1;
  position: sticky;
  top: 0;          
  align-self: flex-start;    
}

.favourites h2 {
  margin-top: 5px;
}

.add-remove-section {
  display: flex;
  text-align: center;
}

.add-drag-drop {
  border: 2px dashed grey; 
}

.remove-drag-drop {
  border: 2px dashed red;
  color: red;
}

.add-drag-drop, .remove-drag-drop {
  padding: 10px;
}

.favourites-btn {
  display: none;
}

/*PropertyList*/
.property-list-div {
  margin-left: 30px;
  box-sizing: border-box;
  flex: 3;
}

.property-list-div h2 {
  margin-top: 5px;
}

.property-list-content {
  display: flex;
  flex-wrap: wrap;
  gap: 15px;
}

/*Favourties and PropertyList displaying section*/
.below-search-form-section {
  display: flex;
  gap: 20px;
  align-items: flex-start;
  margin-top: 20px;
}

/*PropertyDetails*/
.property-details-header-gallery, .property-details-small-content, .property-details-tablist {
  width: 90%;
  border-radius: 5px;
  box-shadow: 1px 2px 5px rgb(214, 210, 210);
  margin: 25px auto;
  padding: 10px;
}

.property-details-header-gallery, .property-details-small-content {
  background-color: rgb(252, 251, 251);
}

.property-details-tablist {
  background-color: rgb(255, 255, 255);
}

.image-gallery {
  margin: 0 auto;
  width: 80%;
}

.image-gallery-svg {
  width: 70% !important;
}

.property-details-small-content > p:first-of-type  {
  text-align: center;
  margin: 0 0 10px 0;
}

.property-details-div h2, h3 {
  text-align: center;
  margin-top: 0;
  margin-bottom: 15px;
}

.property-details-summary {
  display: grid;
  grid-template-columns: repeat(4, 1fr); 
  border: 1px solid rgb(182, 176, 176);
  border-radius: 5px;
  width: 90%;
  margin: 5px auto;
}

.summary-item {
  text-align: center;
  border: 1px solid rgb(116, 116, 116);
  background-color: #f7f7f7;
}

.heading {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 6px;
  color: #555;
  margin: 5px;
  font-weight: bold;
}

.value {
  padding-top: 5px;
  margin: 10px;
  border-top: 2px solid rgb(182, 176, 176);
}

.tab-list {
  padding: 0;
  margin-top: 20px;
  border-bottom: 1px solid black;
}

.property-floor-plan-img, .map-iframe {
  display: block;
  width: 550px;
  margin: 0 auto;
}

.map-iframe {
  border: 0;
  height: 400px;
}

@media (max-width: 700px) {
  /*search form*/ 
  .search-form {
    width: 80%;
    margin: 0 auto;
  }

  .price-bedroom-div, .date-postcode-div {
    flex-direction: column;
  }

  .price-bedroom-div {
    gap: 10px;
  }

  /*below search form*/
  .below-search-form-section {
    flex-direction: column;
    align-items: center;
  }

  /*property list*/
  .property-list-div {
   margin: 0;
   width: 90%;
  }

  .property-list-content {
    justify-content: center;
  }
  
  /*property card*/
  .property-card {
    margin: 0;
    padding-bottom: 18px;
    margin-bottom: 10px;
  }

  .property-card img {
    width: 80%;
    height: 45%;
  }

  /*favourites*/
  .add-remove-section {
    flex-direction: column;
  }

  .add-drag-drop {
    margin: 0 auto;
  }

  .favourites-btn {
    display: block;
    position: fixed;
    bottom: 20px;
    right: 20px;
    background-color: rgba(255, 255, 255, 0.856);
    border: 1px solid black;
    z-index: 1000;
    
  }

  /*property details*/
  .property-details-summary {
    width: 60%;
    grid-template-columns: 1fr;
  }


  

 
}

